RESOLVED FIXED274271
[WebGPU] RenderBundleEncoder::endCurrentICB may assert in ASAN builds on invalid bundle encoder
https://bugs.webkit.org/show_bug.cgi?id=274271
Summary [WebGPU] RenderBundleEncoder::endCurrentICB may assert in ASAN builds on inva...
Mike Wyrzykowski
Reported 2024-05-16 11:56:43 PDT
[WebGPU] RenderBundleEncoder::endCurrentICB may assert in ASAN builds on invalid bundle encoder
Attachments
Mike Wyrzykowski
Comment 1 2024-05-16 11:56:56 PDT
Mike Wyrzykowski
Comment 2 2024-05-16 12:03:28 PDT
EWS
Comment 3 2024-05-20 09:57:13 PDT
Committed 278997@main (21e320d6fce2): <https://commits.webkit.org/278997@main> Reviewed commits have been landed. Closing PR #28668 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.