[WebGPU] RenderBundleEncoder::endCurrentICB may assert in ASAN builds on invalid bundle encoder https://bugs.webkit.org/show_bug.cgi?id=274271 <radar://128064942>

Reviewed by Dan Glastonbury.

There is an ASAN assert in Vector::grow(sz) to ensure sz >= the current size,
which will not be true when replaying commands from an invalid RenderBundleEncoder.

But we shouldn't replay commands from an invalid RenderBundleEncoder in the first place,
so return early if the encoder is invalid.

* LayoutTests/fast/webgpu/fuzz-274271-expected.txt: Added.
* LayoutTests/fast/webgpu/fuzz-274271.html: Added.
* LayoutTests/TestExpectations:
Add regression test.

* Source/WebGPU/WebGPU/RenderBundleEncoder.h:
(WebGPU::RenderBundleEncoder::isValid const): Deleted.
* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::endCurrentICB):
(WebGPU::RenderBundleEncoder::isValid const):
(WebGPU::RenderBundleEncoder::replayCommands):

Canonical link: https://commits.webkit.org/278997@main